--- a/grid.css
+++ b/grid.css
@@ -18,36 +18,121 @@
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b8/Parque_Germ%C3%A2nia%2C_Porto_Alegre%2C_Brasil_.JPG);
     background-size: 100%;
 }
+h1{
+    color: white;
+    text-align: center;
+    padding: 10%;
+    font-size: 75px;
+}
 
 .container main{
     background-color: bisque;
-    height: 680px;
+    height: 600px;
     grid-row-start: 2;
     grid-row-end:2 ;
     grid-column-start: 1;
     grid-column-end: 4;
 }
+h2{
+    text-align: left;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 20px;
+}
+#historia{
+    display: block;
+    float: left;
+    font-size: x-large;
+    margin-top: 30px;
+    margin: 20px;
+    font-family: Arial, Helvetica, sans-serif; 
+}
+#parquemain{
+    width: 80%;
+    height: 300px;
+    float: left;
+    margin-left: 125px;
+    border-radius: 10px;
+    object-fit: cover;
+}
 
 .containerfooter{
     display: grid;
     grid-template-columns: repeat(3, 100%);
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(1, auto);
     gap: 1px;
-
 }
-.section1{
+.containerfooter #left{
     background-color: brown;
-    height: 400px;
+    height: 450px;
     grid-row-start: 1;
     grid-row-end: 1;
     grid-column-start: 1;
     grid-column-end: 2;
 }
-.section2{
-    background-color: brown;
-    height: 400px;
+.containerfooter section{
+    background-color:darkkhaki;
+    height: 450px;
     grid-row-start: 1;
     grid-row-end: 1;
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 3;;
+}
+.containerfooter #right{
+    background-color: brown;
+    height: 450px;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+.titulosfooter{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    display: block;
+    float: left;
+    margin-left: 25%;
+    text-align: center;
+    width: 200px;
+}
+.imgfooter{
+    border-radius: 100%;
+    margin-left: 13%;
+    width: 300px;
+    height: auto;
+}
+.imgfooterfilme{
+    border-radius: 100%;
+    margin-left: 13%;
+    width: 300px;
+    height: 300px;
+}
+
+#umbral{
+    display: block;
+    margin-top: 10px;
+}
+
+#imgbral{
+    display: block;
+    position: absolute;
+    margin-top: 75px;
+    margin-left: 55px;
+}
+.textofooter{
+    display: block;
+    float: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    margin: 5px;
+    text-align: center;
+}
+.textofooterumbral{
+    display: block;
+    float: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    margin: 5px;
+    text-align: center;
+    margin-top: 295px;
 }
